--- a/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
+++ b/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
@@ -29,7 +29,7 @@
 
   <div ng-if="tunnusluku" ng-repeat="chart in tunnusluku.charts" ng-init="chartid = $index">
 
-    <h3>{{chart.title}}</h3>
+    <h3>{{chart.options.type}}</h3>
 
     <form id="tunnusluku-filter-form-{{chartid}}" name="tunnusluku-filter-form" class="form-inline tunnusluku-filter-form">
       <form-group label="{{filter.nimi}}" ng-repeat="filter in chart.filters">
@@ -43,7 +43,7 @@
 
     <nvd3 options='chart.options' data='data[chartid]' api="params.charts[chartid].api"></nvd3>
 
-    <a ng-csv="csv[chartid]" class="pull-right view-link"
+    <a ng-csv="csv[chartid]" class="pull-right lataacsv"
        filename="tunnuslukudata.csv" decimal-separator=","
        field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
     </a>
