--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -292,8 +292,10 @@ textarea
   opacity:.5
 
 .lataacsv
+  margin-bottom: 30px;
+  margin-top: -12px;
+  margin-right: 20px;
   font-size: 14px;
-  padding-top: 28px;
   font-weight: 600;
   text-align: right
 
