LIVIJUKU-757 - pienten kaupunkiseutujen avustusdatassa on vain myönnetty avustus - avustustyypin valinta on disabloitu pienten kaupunkiseutujen välilehdellä

--- a/app/scripts/views/tunnusluvut/raportit-valtionavustuskuvaajat.html
+++ b/app/scripts/views/tunnusluvut/raportit-valtionavustuskuvaajat.html
@@ -17,6 +17,13 @@
   </juku-navigation>
   <br><br>
 
+  <p ng-if="organisaatiolaji === 'KS3'">
+    Pienet kaupunkiseudut saavat joukkoliikennetukensa ELY keskusten kautta.
+    ELY välittää osan saamastaan valtion avustuksesta pienille kaupunkiseuduille ja muille toimivalta-alueensa kunnille.
+    Pienten kaupunkiseutujen tuki näytetään eriteltynä vain tällä välilehdellä ja tuesta näytetään vain myönnetty avustus.
+    Kaikki välilehdellä ja ELY-välilehdellä tämä tuki sisältyy ELY:jen saamaan tukeen.
+  </p>
+
   <div class="row">
     <nvd3 options='avustus.options' data='avustus.data' api="avustus.api"></nvd3>
     <a ng-csv="exportCsvMultibar(haettuMyonnettyYhteensaData())" class="pull-right lataacsv"
@@ -27,15 +34,17 @@
   <br>
   <div class="row">
     <form id="avustustyyppi-valinta-form" name="avustustyyppi-valinta-form" class="form-inline tunnusluku-filter-form">
-      <div class="form-group">
-        <label for="avustustyyppi" class="radio inline control-label">Valitse avustustieto jota halutaan tarkastella organisaatioittain:</label>
-        <label class="radio-inline">
-          <input type="radio" name="avustustyyppi" id="avustustyyppi-h" value="H" ng-model="avustustyyppi"> Haettu avustus
-        </label>
-        <label class="radio-inline">
-          <input type="radio" name="avustustyyppi" id="avustustyyppi-m" value="M" ng-model="avustustyyppi"> Myönnetty avustus
-        </label>
-      </div>
+      <fieldset ng-disabled="organisaatiolaji === 'KS3'">
+        <div class="form-group">
+          <label for="avustustyyppi" class="radio inline control-label">Valitse avustustieto jota halutaan tarkastella organisaatioittain:</label>
+          <label class="radio-inline">
+            <input type="radio" name="avustustyyppi" id="avustustyyppi-h" value="H" ng-model="avustustyyppi"> Haettu avustus
+          </label>
+          <label class="radio-inline">
+            <input type="radio" name="avustustyyppi" id="avustustyyppi-m" value="M" ng-model="avustustyyppi"> Myönnetty avustus
+          </label>
+        </div>
+      </fieldset>
     </form>
 
     <nvd3 options='avustusdetail.options' data='avustusdetail.data' api="avustusdetail.api"></nvd3>
