--- a/app/scripts/views/tunnusluvut/muokkaus.html
+++ b/app/scripts/views/tunnusluvut/muokkaus.html
@@ -18,10 +18,7 @@
                 ng-model="vuosi" ng-disabled="isReadonly()"
                 placeholder="Valitse vuosi" class="form-control" required>
           <option value="" selected disabled>Valitse vuosi</option>
-          <option value="2012">2012</option>
-          <option value="2013">2013</option>
-          <option value="2014">2014</option>
-          <option value="2015">2015</option>
+          <option ng-repeat="vuosi in vuodet" value="{{vuosi}}">{{vuosi}}</option>
         </select>
       </div>
       <div class="col-md-6">
