--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -293,6 +293,7 @@ textarea
 
 .lataacsv
   margin-bottom: 30px;
+  cursor: pointer;
   margin-top: -12px;
   margin-right: 20px;
   font-size: 14px;
