--- a/app/scripts/views/tunnusluvut/raportit-valtionavustuskuvaajat.html
+++ b/app/scripts/views/tunnusluvut/raportit-valtionavustuskuvaajat.html
@@ -27,7 +27,7 @@
   <div class="row">
     <nvd3 options='avustus.options' data='avustus.data' api="avustus.api"></nvd3>
     <a ng-csv="avustus.csv" class="pull-right lataacsv"
-       filename="Joukkoliikenteen_valtionavustushakemukset_ja_päätökset.csv"
+       filename="avustukset.csv"
        field-separator=";" add-bom="true" decimal-separator=","><span class="glyphicon glyphicon-save"></span> Lataa CSV
     </a>
   </div>
@@ -49,7 +49,7 @@
 
     <nvd3 options='avustusdetail.options' data='avustusdetail.data' api="avustusdetail.api"></nvd3>
     <a ng-csv="avustusdetail.csv" class="pull-right lataacsv"
-       filename="Myönnetyt_organisaatioittain.csv"
+       filename="avustus-organisaatioittain.csv"
        field-separator=";" add-bom="true" decimal-separator=","><span class="glyphicon glyphicon-save"></span> Lataa CSV
     </a>
   </div>
@@ -57,7 +57,7 @@
   <div class="row">
     <nvd3 options='avustusperasukas.options' data='avustusperasukas.data' api="avustusperasukas.api"></nvd3>
     <a ng-csv="avustusperasukas.csv" class="pull-right lataacsv"
-       filename="Myönnetty_asukas.csv"
+       filename="avustus-asukastakohti.csv"
        field-separator=";" add-bom="true" decimal-separator=","><span class="glyphicon glyphicon-save"></span> Lataa CSV
     </a>
   </div>
