LIVIJUKU-776: Tunnuslukujen syöttäminen: asukasluku-linkin päivitys: http://www.vrk.fi/default.aspx?id=278

--- a/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
@@ -257,7 +257,7 @@
                      tooltip-enable="haeTunnuslukuTooltip('ASUKASMAARA')"
                      tooltip-placement="top"
                      tooltip-append-to-body="true">Asukasmäärä (<a
-                  href="http://www.vrk.fi/default.aspx?id=278&docid=3973"
+                  href="http://www.vrk.fi/default.aspx?id=278"
                   target="_blank">VRK:n asukaslukutilastot</a>)&nbsp;<span
                   ng-if="haeTunnuslukuTooltip('MAAPINTAALA')"
                   class="text-info small glyphicon glyphicon-question-sign"></span></div>
