--- a/app/scripts/views/tunnusluvut/muokkaus-me.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-me.html
@@ -1,6 +1,7 @@
 <div class="container">
   <juku-form-row>
     <h2>Markkinaehtoinen liikenne {{vuosi}}</h2>
+    <p>Markkinaehtoinen liikenne on reittiliikennettä, jolle toimivaltainen viranomainen on myöntänyt reittiliikenneluvan. Vuorojen ja linja-kilometrien määrä saadaan reittiliikenneluvista.</p>
   </juku-form-row>
   <juku-form-row>
     <small><em>Tämän välilehden tietojen täyttöaste:</em></small>
