--- a/app/scripts/components/tunnusluvut/liikennointikorvaukset/index.html
+++ b/app/scripts/components/tunnusluvut/liikennointikorvaukset/index.html
@@ -1,7 +1,9 @@
 <ng-form id="{{tyyppi + '-liikennointikorvaukset-form'}}" name="liikennointikorvauksetForm"
          class="liikennointikorvaukset">
   <juku-form-row>
-    <h3>Maksettu liikennöintikorvaus</h3>
+    <h3 ng-if="tyyppi!=='ME'">Maksettu liikennöintikorvaus</h3>
+    <h3 ng-if="tyyppi==='ME'">Maksettu asiakashinnan nousukorvaus ja nousut</h3>
+    <p ng-if="tyyppi==='ME'">Maksettava asiakashinnan nousukorvaus perustuu TVV:n ja liikenteenharjoittajan väliseen sopimukseen TVV:n lippujen kelpoisuudesta markkinaehtoisessa liikenteessä.</p>
     <div class="table-responsive">
       <table class="table table-hover table-condensed">
         <thead>
