LIVIJUKU-774: Tunnuslukujen syöttäminen: "Valitse vuosi:"-tekstin lisääminen vuosiluvun valinnan eteen (hakijoilla)

--- a/app/scripts/views/tunnusluvut/muokkaus.html
+++ b/app/scripts/views/tunnusluvut/muokkaus.html
@@ -13,8 +13,8 @@
         </select>
       </div>
       <div class="col-md-2 form-group input-lg" ng-show="hasOrganisaatioSelectPermission">
-        <label for="vuosi" class="sr-only">Vuosi</label>
-        <select id="vuosi" name="vuosi"
+        <label for="org_vuosi" class="sr-only">Vuosi</label>
+        <select id="org_vuosi" name="vuosi"
                 ng-model="vuosi" ng-disabled="isReadonly()"
                 placeholder="Valitse vuosi" class="form-control" required>
           <option value="" selected disabled>Valitse vuosi</option>
