--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -2,6 +2,7 @@
 @import './ui-grid.min.css'
 @import './nv.d3.css'
 @import './xeditable.css'
+@import './nya-bs-select.css'
 @import '../scripts/components/tab'
 @import '../scripts/components/table'
 @import '../scripts/components/panel'
