--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -328,3 +328,8 @@ textarea
     margin-right: 10px
   select
     margin-right: 20px
+
+.tunnusluku-vuosi-label
+  font-size: 18px
+  padding-top: 15px
+  font-weight: 400
